# space-invaders

./: .clang-format  .cmake-format.json  .pre-commit-config.yaml  ;  CMakeLists.txt  requirements.txt
app/: CMakeLists.txt  main.cpp
game/: CMakeLists.txt  Object.cpp  Object.h
game/inc/: Game.h  GameState.h  Metrics.h  Object.h  Rect.h
game/inc/game/: FixedSizeVec.h  Game.h  Helpers.h  Input.h  Object.h  Raster.h
game/resources/: player.txt
game/src/: Game.cpp  Rect.cpp
game/src/game/: Game.cpp  Helpers.cpp  Object.cpp  Raster.cpp  Rect.cpp
game/test/: CMakeLists.txt  Game.cpp  Rect.cpp
gui/: CMakeLists.txt
gui/inc/gui/: Render.h
gui/src/gui/: Render.cpp
render/: CMakeLists.txt
render/inc/render/: Context.h
render/src/render/: Context.cpp
test/: CMakeLists.txt
